MyDevOrg/src/objects/Customer_search__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Customer search</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer searchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>